RESOLVED FIXED214153
REGRESSION(r262302): ITMLKit debuggables in listings are missing a title, use UUID instead
https://bugs.webkit.org/show_bug.cgi?id=214153
Summary REGRESSION(r262302): ITMLKit debuggables in listings are missing a title, use...
Blaze Burg
Reported 2020-07-09 11:50:51 PDT
Attachments
Patch (1.61 KB, patch)
2020-07-09 11:53 PDT, Blaze Burg
no flags
Blaze Burg
Comment 1 2020-07-09 11:53:17 PDT
Devin Rousso
Comment 2 2020-07-09 11:53:36 PDT
Comment on attachment 403895 [details] Patch r=me
EWS
Comment 3 2020-07-09 12:16:28 PDT
Committed r264185: <https://trac.webkit.org/changeset/264185> All reviewed patches have been landed. Closing bug and clearing flags on attachment 403895 [details].
Note You need to log in before you can comment on or make changes to this bug.