REGRESSION(r262302): ITMLKit debuggables in listings are missing a title, use UUID instead https://bugs.webkit.org/show_bug.cgi?id=214153

Reviewed by Devin Rousso.

* inspector/remote/cocoa/RemoteInspectorCocoa.mm:
(Inspector::RemoteInspector::listingForInspectionTarget const):
Looks like this is due to copypasta.


Canonical link: https://commits.webkit.org/226957@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264185 268f45cc-cd09-0410-ab3c-d52691b4dbfc